--- a/app/views/messages/compose_message.html.erb
+++ b/app/views/messages/compose_message.html.erb
@@ -1,7 +1,7 @@
 <%= javascript_include_tag "validation" %>
 <div style="width:40%;"><h4> New Message</h4></div>
 
-<%= form_for(@message, :url => {:controller=>"messages", :action=>"sent_to"}, :remote=> true) do |f| %>
+<%= form_for(@message, :url => {:controller=>"messages", :action=>"sent_to"}, :html=>{:id=>"reply_message"}, :remote=> true) do |f| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -23,11 +23,11 @@
  
   <div class="row" style="margin-left: 1px;">
     
-    <%= f.text_area :body ,:class => "pe_tf" ,:style => "width:500px;" ,:rows => "10"%>
+    <%= f.text_area :body ,:class => "pe_tf" ,:style => "width:500px; border: 2px solid #eee;" ,:rows => "10"%>
   </div>
 
-  <div class="actions" style ="float:left">
-    <%= f.submit "Send message",:class => "btn" %>
+  <div class="actions" style ="float:right; margin-top: 20px;">
+    <%= f.submit "Proceed", :class => "book", :style=>"margin:0; padding: 6px 45px; position: unset; font-size: 14px;" %>
   </div>
 
 <% end %>
