--- a/app/views/bookings/search_by_date.html.erb
+++ b/app/views/bookings/search_by_date.html.erb
@@ -1,39 +1,121 @@
+<div class="main-new">
+            <ul class="verticle-menu">
+            <li><a href="#">Personal Information</a></li>
+            <li><a href="#">Change Password</a></li>
+            <li><a href="#">Bank Details</a></li>
+            <li><a href="#">My Post</a></li>
+            <li><a href="#">My Order/Received</a></li>
+            <li class="active"><%= link_to "My Booking", bookings_path%></a></li>
+            <li><a href="#">Payment</a></li>
+            <li><a href="#">Message</a></li>
+            </ul>
+          
 
-<table class="table table-striped">
-<tr>
-<!-- <th>Sr No.</th> -->
-<th>Booking Date</th>
-<th>Booking Area/Sq.Ft</th>
-<th>Lister's Name</th>
-<th>Address</th>
-<th>Pickup?</th>
-<th>Dropoff?</th>
-<th>Pick up Date</th>
-<th>Drop off Date</th>
-<th>Order</th>
-</tr>
-<% @bookings.each do |booking|%>
-<tr>
-<!-- <td><%#= index + 1 %></td> -->
-<td><%= booking.created_at.to_date %></td>
-<td><%= Post.find(booking.post_id).area %></td>
-<td><%= User.find(booking.user_id).name %></td>
-<td><%= Post.find(booking.post_id).address %></td>
-	<%if Post.find(booking.post_id).pick_up == true%>
-	<td><%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = true, disabled: true)%></td>
-	<td><%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = false, disabled: true)%></td>
-	<%else%>
-	<td><%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = false, disabled: true)%></td>
-	<td><%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = true, disabled: true)%></td>
-	<%end%>
- <td><%= Post.find(booking.post_id).pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= Post.find(booking.post_id).pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
-	</td>
- <td><%= Post.find(booking.post_id).drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= Post.find(booking.post_id).drop_off_avaibility_end_date.strftime("%d-%m-%Y")%></td>
-	
-<td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
+            <div class="right-side">
+              <div class="blue-header">
+                    <%= form_tag search_by_date_path,:method => 'get' do %>
+                    <ul class="date">
+                    <li>
+                    From <span><%= text_field_tag :start_date, params[:start_date],:autocomplete => :off, :class => "date", :style => "padding: 3px;"%></span>
+                    </li>
+                    
+                    <li>
+                    To <span><%= text_field_tag :end_date, params[:end_date],:class => "date",:style => "padding: 3px;" %></span>
+                    </li>
+                    
+                    </ul>
+                    <div class="search">
+                    <%#= submit_tag "Submit"%>
+                    <!-- <a href=""><img src="/assets/search_new.png"></a> -->
+                    </div>
+                    <%end%> 
+              </div>
+                
+                <div class="booking-wrap">
+                <div class="bmar10 font10"><%= link_to "Show all",bookings_path %></a> / Hide cancelled and past bookings</div>
+                    <% @bookings.each_with_index do |booking, index|%>
+                    <div class="booking-box">
+                        <div class="booking-col">
+                            <span class="booking-name"><%= User.find(booking.poster_id).name.capitalize rescue nil%> <%= User.find(booking.poster_id).last_name[0,1] rescue nil%></span><% if booking.post.user.provider.present? && booking.post.user_id != current_user.id %>
+                                (<%= mutual_friend_list(booking.post.user.id) rescue nil%> mutual friends)<% end %>
+                            <p>
+                            <%= Post.find(booking.post_id).address%>
+                            </p>
+                        </div>
+                        
+                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : <%= Post.find(booking.post_id).area %> sq. ft
+                        <p>
+                           <%if booking.status.present? %>      
+                              <span>Status</span> : <%= booking.status rescue nil%>
+                           <%else%>
+                              <span>Status</span> : Waiting for drop-off confirmation
+                           <%end%>
+                        </p>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : <%= Post.find(booking.post_id).drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= Post.find(booking.post_id).drop_off_avaibility_end_date.strftime("%d-%m-%Y")%>
+                        <p>
+            <span>Booked drop-off</span> 
+                        <label class="tasks-list-item">
+                        <%if Post.find(booking.post_id).pick_up == true%>
+                          <%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = false, disabled: true)%>
+                        <%else%>
+                          <%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = true, disabled: true)%>
+                        <%end%>
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        <p>
+                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        </p>
 
-<td><%#= link_to "Delete", [:delete, adminuser], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-<td><%#= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
-</tr>
-<%end%> 
-</table>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : <%= Post.find(booking.post_id).pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= Post.find(booking.post_id).pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
+                        <p>
+            <span>Booked pick-up</span>
+                        <label class="tasks-list-item">
+                        <%if Post.find(booking.post_id).pick_up == true%>
+                          <%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = true, disabled: true)%>
+                        <%else%>
+                          <%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = false, disabled: true)%>
+                        <%end%>
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        </div>
+                        
+                  <div class="note"><span>Notes</span> : <%=booking.post.additional_comments rescue nil%>
+                        </div>
+                        </div>
+                        <%end%> 
+                        
+                        
+                     
+                        
+                        
+                        
+                    
+                    
+                </div>
+            </div>
+        </div>
+ 
+  </div><!-------------------main--------------------------->
+</div><!-------------------wrapper--------------------------->
+            
+             
+ 
+        
+
+
+
+
+</body>
+</html>
