--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,49 +1,31 @@
  
 <%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
- 
-<!-- 	<%= form_for :contactus, :url=>{:controller=>'contactus',:action=>'create'},:html => {:id => "contactus"} do |f| %>
-	<div>
-	  <div class="field">
-	   <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Subject"}, :class=>"alignleft" %></br> </br>
-	   </div>
-
-	<div>
-	<%= f.label :Message %><br />	
-	<%= f.text_area :message,:cols => "30", :rows => "5"%>
-	</div></br>
-	<%= f.submit "submit", :class => "btn btn-primary contact-form"%>
-	<% end %> 
-  -->
-
-
-     
-
- 
-
-
-
 
 <div class="wrapper">
 <div class="main">   
 <div class="main4">
-<div class="main-new">
+<div class="main-new" style="border-top: 1px solid #eeeeee;">
             <ul class="verticle-menu" style="min-height:500px;" >
       
             <li class="active"><%= link_to 'Contact-Us', home_contactus_path %></li>
-            <li><a href="#">FAQs</a></li>
+            <li><%=  link_to "FAQs",faqs_path%></li>
             
             </ul>
                    
 
               <%= form_for :contactus, :url=>{:controller=>'contactus',:action=>'create'},:html => {:id => "contactus"} do |f| %>
+
+              
+
                <div class="topics">
-                    <div style="overflow: hidden; border: 1px solid rgb(238, 238, 238); margin-left: 188px; width: 289px;" > <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Topic"}%></div><br/><br/>
-              </div> 
+                    <div style="overflow: hidden; border: 1px solid rgb(238, 238, 238); margin-left: 144px; width: 291px; " > <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Topic"}%></div><br/><br/>
+
+               </div> 
                 
               
 
-                <div class="massage"><%= f.text_area :message,:cols => "40", :rows => "40",placeholder: "Message", :style=>"width:270px; height:80px;", :id=>"topic1" %></div>
-                <%= f.submit "submit", :class => "submit button", :type => "button"%><br>   
+                <div class="massage"><%= f.text_area :message,:cols => "40", :rows => "40",placeholder: "Message", :style=>"width:290px; height:80px;", :id=>"topic1" %></div>
+                <%= f.submit "submit", :class => "submit button"%><br>   
                 <% end %>
                
                 
