--- a/app/views/bookings/cancel_popup.html.erb
+++ b/app/views/bookings/cancel_popup.html.erb
@@ -6,12 +6,12 @@
 
 <a href="#">Learn more</a>
 
-	<div class="actions" style ="float:right; margin-top: 20px;">
+	<div class="actions" >
 		
-		<% if @booking.status == "Cancel" %>
+		<% if @booking.is_cancel == true %>
 			<%= link_to "Already Booking", "javascript:void(0)", :class => "book", :style=>"margin:0; padding: 6px 45px; position: unset; font-size: 14px;" %>
 		<% else %>
-    	<%= link_to "Cancel Booking", cancel_booking_bookings_path(:drop_off_date =>params[:drop_off_date],:id =>params[:id]), :class => "book", :style=>"margin:0; padding: 6px 45px; position: unset; font-size: 14px;" %>
+    	<%= link_to "Cancel Booking", cancel_booking_bookings_path(:drop_off_date =>params[:drop_off_date],:id =>params[:id]), :class => "blue-btn b-mar" %>
     	<% end %>
   	</div>
 
