--- a/app/views/faqs/faq.html.erb
+++ b/app/views/faqs/faq.html.erb
@@ -36,9 +36,8 @@ ddaccordion.init({
     <div class="blue-header">
       <%= form_tag faq_path, method: :get do %>
       <span class="font20"><%= text_field_tag :search, params[:search]%></span>
-      <div class="search mart5">
-        <%#= submit_tag 'Search' %>
-        <a href="#"><img src="/assets/search_new.png"></a>
+      <div class="search">
+        <%= submit_tag 'Search' %>
       </div>
       <% end %>
     </div>
